# UATU

./: .gitignore  README.md  README_EN.md  app.js  cco.sh  package.json  server.js  version.json
analytics/: anomaly.js  cost-aggregator.js  engines.js  evaluation.js  intent.js  provider-router.js  session.js  tool-quality.js
cc-proxy/: Cargo.toml  config.example.json
cc-proxy/src/: agent_role.rs  cli.rs  cluster.rs  config.rs  control.rs  cost.rs  dispatch.rs  error.rs  ext_proc.rs  hvr.rs  jsonlog.rs  lib.rs  main.rs  memory.rs  pii.rs  priority.rs  provider.rs  proxy.rs  retrial.rs  server.rs  signals.rs  strategy.rs
cc-proxy/src/transform/: anthropic_to_openai.rs  codex.rs  mod.rs  normalize.rs  openai_to_anthropic.rs
ingest/: cc-proxy-client.js  log-watcher.js
lib/: alert-rules.js  auth.js  cache.js  log-buffer.js  parsers.js  proxy-guard.js  store.js  websocket.js
process/: cc-proxy-manager.js
routes/: ccproxy.js  generations.js  health.js  models.js  otlp.js  routing.js  scores.js  sessions.js  strategy.js  traces.js  updater.js
ui/static/: app.css  app.js
ui/templates/: index.html
updater/: applier.js  checker.js
