[package]
name = "cc-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tokio-stream = "0.1"
futures = "0.3"
dirs = "6"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
colored = "2"
chrono = "0.4"
md5 = "0.7"
regex = "1"
duckdb = { version = "1.2", features = ["bundled"] }
arc-swap = "1"
cel-interpreter = { version = "0.10", features = ["json"] }
cel-parser = "0.10"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
hyper = "1"
